8144801: Class.forName(Module,String) throws unspecified SecurityException